--- a/css/utils.less
+++ b/css/utils.less
@@ -1,6 +1,8 @@
 /* ---------- ==========================================
     LESS mixins + utility classes
 */
+@placeholder: ~"::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder";
+
 .selection-style(@background,@color) {
   ::-moz-selection { color: @color;  background: @background; }
   ::selection      { color: @color;  background: @background; } 
@@ -131,7 +133,7 @@
     transition: @target @duration @ease;
 }
 
-.no-transition { .transition(0); }
+.no-transition() { .transition(0); }
 
 .inner-shadow(@horizontal:0, @vertical:1px, @blur:2px, @alpha: 0.4) {
     -webkit-box-shadow: inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
