Separated logic of Application (MVC implementer master class) from View (presentation class)

--- a/ui/css/scaffolding.less
+++ b/ui/css/scaffolding.less
@@ -121,5 +121,8 @@ html, body {
     font-size: 18px;
   }
 
-  img { width: 150px; }
+  img { 
+    margin-bottom: 10px;
+    width: 150px; 
+  }
 }
